# invianhack

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  makefile  pyproject.toml  track.py  vehicle_tracker.py  vis.py
.streamlit/: config.toml
backend/: data.py  pyproject.toml
yem/: consumer.py  main.py  models.py  track.py  vehicle_tracker.py  vis.py
yem/frontend/: main.py  main2.py  vis_utils.py
yem/settings/: kafka.py  mongo.py
