[tool.poetry]
name = "yem"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
confluent-kafka = "^2.3.0"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pymongo = "^4.7.0"
mpld3 = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
